# 5G

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main_wavelength.cpp
shared/include/: constants.h  utilities.h
shared/src/: utilities.cpp
tests/: utilities_test.cpp
utilities/CalculateFrequencyGivenWavelength/src/: main.cpp
utilities/CalculateInformationBitsPerTTISlot/src/: main.cpp
utilities/CalculateSpectralEfficiency/src/: main.cpp
utilities/CoherenceBandwidthCalculator/src/: main.cpp
utilities/CoherenceTimeCalculator/src/: main.cpp
utilities/ConvertDbmToWatts/src/: main.cpp
utilities/ConvertWattsToDbm/src/: main.cpp
utilities/DLThroughputCalculator/src/: main.cpp
utilities/DescribeFrameStructureGivenNumerology/src/: main.cpp
utilities/FFTSizeCalculator/src/: main.cpp
utilities/GetModulationOrderAndCodeRate/src/: main.cpp
utilities/NumOfSubCarriersGivenScsAndBandwidth/src/: main.cpp
utilities/OFDMSymbolDurationCalculatorGivenSCS/src/: main.cpp
utilities/PathLossCalculator5G/src/: main.cpp
utilities/PathLossCalculatorRural/src/: main.cpp
utilities/QamModulationSchemeDescriptor/src/: main.cpp
utilities/ShannonsCapacityCalculator/src/: main.cpp
utilities/TrafficDensityCalculator/src/: main.cpp
utilities/WavelengthCalculator/src/: main.cpp
